# lute-shona

./: DATASETS.md  DESIGN.md  README.md  pyproject.toml
lute_shona_parser/: morphology.py  parser.py  rules.py
scripts/: check_collisions.py  generate_css.py
tests/: test_generate_css.py  test_morphology.py
